[FIX] full size image, sidebar menu, scrollbar

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -32,10 +32,13 @@ html {
   overflow-y: scroll;
   transition: all 500ms ease;
   &::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
   }
   &::-webkit-scrollbar-thumb {
-    background: red;
+    background: rgba(255, 255, 255, 0.4);
     border-radius: 10px;
+  }
+  &::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0.15);
   }
 }
