--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -111,7 +111,7 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .about-wrapper {
     display: block;
   }
