--- a/src/styles/ImageCarouselModal.scss
+++ b/src/styles/ImageCarouselModal.scss
@@ -1,13 +1,13 @@
 .imageCarouselModal {
+  position: fixed;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
   left: 50px;
-  height: 100%;
   z-index: 2;
   transition: all ease-in-out 500ms;
   &.hidden {
@@ -17,8 +17,9 @@
     transform: scale(1);
   }
 
-  .container {
+  & .container {
     width: 90%;
+    height: 90%;
     padding: 10px;
     padding-top: 40px;
     position: relative;
@@ -33,10 +34,24 @@
       right: 5px;
       cursor: pointer;
     }
+    & .images-container {
+      width: 100%;
+      height: 100%;
+      & .mySwiper {
+        height: 100%;
+        width: 100%;
+        & .swiper-image {
+          max-height: 100%;
+          height: auto;
+          max-width: 100%;
+          width: auto;
+        }
+      }
+    }
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .imageCarouselModal {
     left: 0;
   }
