--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -217,7 +217,7 @@ $text-color: #fff;
   right: 0;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .maincontent {
     left: 0;
     width: 100%;
